# stripe-try

./: .flake8  .gitignore  README.md  manage.py  pyproject.toml
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_username.py  0003_chapter_user_customer_id.py  0004_remove_chapter_number.py  0005_paymentlog_card.py  0006_rename_paymentlog_purchaselog.py
api/stripe/: base.py  customer.py  payment_intent.py  payment_method.py  price.py  product.py  setup_intent.py  stripe_err_handler.py  subscription.py
be/: settings.py  urls.py
be/settings/: base.py  dev.py  prod.py
