[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
line-length = 100

[tool.isort]
known_django = ["django", "rest_framework"]
line_length = 100
profile = "black"
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.poetry]
authors = ["AdachiTetsuya <1019born@gmail.com>"]
description = ""
name = "be"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
black = "^23.3.0"
django = "^4.2.1"
django-cors-headers = "^4.0.0"
djangorestframework = "^3.14.0"
isort = "^5.12.0"
pre-commit = "^3.3.2"
python = "^3.11"
python-dotenv = "^1.0.0"
toml-sort = "^0.23.1"
dj-rest-auth = "^4.0.1"
djangorestframework-simplejwt = "^5.2.2"
dj-database-url = "^2.0.0"
django-allauth = "^0.54.0"
